# website

./: .gitignore  .rsync-exclude  Caddyfile  Cargo.toml  README.md  Rocket.toml  caddy.json  caddy_schema.json  set-exif.sh  sync.sh
content/blog-posts/: exif-sucks.md  hello-world.md  planned-posts.json
content/photos/: albums.json  default-flex-grid-config.json
highlight-server/: .rsynkr  main.js  package-lock.json  package.json
http-server/: Cargo.toml
http-server/src/: blog.rs  log_404.rs  main.rs  photos.rs  util.rs
http-server/src/util/: fifo.rs  html.rs  mod.rs
static/: .gitignore
static/js/: fill-maps.js  load-imgs.js
static/style/: blog.css  index.css  photos.css  prism.css
templates/: base.html.tera  index.html.tera
templates/blog/: base.html.tera  index.html.tera  planned.html.tera  post-list.html.tera  post-meta.html.tera  post-stub-big.html.tera  post-stub.html.tera  post.html.tera  tag.html.tera  tags-list.html.tera
templates/photos/: album-preview-box.html.tera  album.html.tera  albums.html.tera  base.html.tera  flex-grid.html.tera  index.html.tera  map-embed.html.tera  map-header.html.tera  map.html.tera  photo-smallbox.html.tera  photo.html.tera  script-header.html.tera
