[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.50"
arc-swap = "1.5.0"
base64 = "0.13.0"
chrono = "0.4.19"
glob = "0.3"
image = { version = "0.23.14", default-features = false, features = ["jpeg"] }
kamadak-exif = "0.5.4" # imports as 'exif'
lazy_static = "1.4.0"
libc = "0.2"
pulldown-cmark = "0.8"
rayon = "1.5.1"
rocket = { version = "0.4.10", default-features = false }
rocket_contrib = { version = "0.4.10", features = ["tera_templates"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.72"
sha2 = "0.10.0"
toml = "0.5"
webp = "0.2"
